@@ -79,10 +79,10 @@ export class CountController extends Controller<HTMLFormElement> {
       this.element.classList.toggle(this.activeClass, total > min);
     }
     if (this.hasLabelTarget) {
-      this.labelTarget.innerHTML = total > min ? this.getLabel(total) : '';
+      this.labelTarget.textContent = total > min ? this.getLabel(total) : '';
     }
     if (this.hasTotalTarget) {
-      this.totalTarget.innerHTML = total > min ? `${total}` : '';
+      this.totalTarget.textContent = total > min ? `${total}` : '';
     }
   }
 }
